--- a/src/app/listado-usuarios/listado-usuarios.component.scss
+++ b/src/app/listado-usuarios/listado-usuarios.component.scss
@@ -9,6 +9,12 @@
 .edit-mode {
   background-color: #ffffff;
 }
+.circular-image {
+  width: 40px; /* Ajusta el tamaño según sea necesario */
+  height: 40px; /* Ajusta el tamaño según sea necesario */
+  border-radius: 50%;
+  overflow: hidden;
+}
 
 
 .marco-div {
