--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,7 +15,7 @@
       <span class="input-icon">
         <i class="fa fa-user"></i>
       </span>
-      <input type="email" class="login-username" autofocus="true" required="true" placeholder="Usuario" formControlName="usuario" />
+      <input type="email" class="login-username" autofocus="true" required="true" placeholder="Usuario" formControlName="Identificacion" />
     </div>
 
 <!-- Password Input with Icon -->
