--- a/src/app/productosplato/productosplato.component.scss
+++ b/src/app/productosplato/productosplato.component.scss
@@ -12,8 +12,15 @@ img {
 .btn1 {
   color: #ffffff;
 }
-
-
+.m{
+  color: rgb(196, 22, 22);
+  font-size: 17px;
+  font-weight: bold;
+  
+}
+.rojo{
+  color: black;
+}
 
 .pagination-containerrrr {
   display: flex;
