--- a/src/app/reporte/reporte.component.scss
+++ b/src/app/reporte/reporte.component.scss
@@ -151,3 +151,13 @@ h2{
 .dropdown-menu{
   cursor: pointer;
 }
+
+.circular-image {
+  width: 40px; /* Ajusta el tamaño según sea necesario */
+  height: 40px; /* Ajusta el tamaño según sea necesario */
+  border-radius: 50%;
+  overflow: hidden;
+}
+.lt{
+  font-family: 'Arial';
+}
