--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -15,13 +15,18 @@
             <ul class="navbar-nav">
               
                 <li class="nav-item dropdown">
-                    <a class="nav-link cltitle" href="javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        {{usuario}} <i class="material-icons">person</i>
+                    <a class="nav-link cltitle d-flex align-items-center" *ngIf="usuariosss" href="javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        {{usuariosss.persona.Apellido1}}  {{usuariosss.persona.Nombre1}} 
                       
-                        <p>
-                            <span class="d-lg-none d-md-block">Some Actions</span>
+                        <div class="ml-2" *ngIf="usuariosss"> <!-- Agregado un margen izquierdo para separar el texto del usuario de la imagen -->
+                          <img [src]="'http://localhost:3000/imagenes/' + usuariosss.persona.foto" alt="Foto de usuario" class="img-carnet circular-image">
+                        </div>
+                      
+                        <p class="ml-2"> <!-- Agregado un margen izquierdo para separar el texto del usuario de "Some Actions" -->
+                          <span class="d-lg-none d-md-block">Some Actions</span>
                         </p>
-                    </a>
+                      </a>
+                      
                     <div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item"  routerLink="/configuracionyprivacidad" > <i class="material-icons">settings</i> Cofiguración y privacidad</a>
                         <a class="dropdown-item" routerLink="/ayuda"><i class="material-icons">help</i> Ayuda</a>
