--- a/src/app/configuracion-privacidad/configuracion-privacidad.component.scss
+++ b/src/app/configuracion-privacidad/configuracion-privacidad.component.scss
@@ -7,9 +7,7 @@
   background-color: #f2f2f2;
 }
 
-.editable-row {
-  cursor: pointer;
-}
+ 
 
 .editable-row:hover {
   background-color: #f2f2f2;
@@ -33,7 +31,9 @@
   // margin-bottom: 0;
 }
 
-
+.editable-rowr{
+  color: #807f7f;
+}
 
 .texto-grueso {
   font-weight: bold;
@@ -119,8 +119,20 @@ th {
   color: rgb(158, 155, 155);
   text-align: center;
 
+  max-width: 150px; /* ajusta el tamaño máximo según tus necesidades */
+  max-height: 150px; /* ajusta el tamaño máximo según tus necesidades */
+  width: auto;
+  height: auto;
+
 
 }
+.selected-image {
+  max-width: 200px; /* ajusta el tamaño máximo según tus necesidades */
+  max-height: 200px; /* ajusta el tamaño máximo según tus necesidades */
+  width: auto;
+  height: auto;
+}
+
 
 
 .estilos {
@@ -147,3 +159,47 @@ header {
   justify-content: center;
   align-items: center;
 }
+
+.letrita{
+  font-size: 15px;
+  color: rgb(93, 97, 100);
+  cursor: pointer;
+}
+
+.letritav2{
+  font-size: 15px;
+  color: rgb(93, 97, 100);
+  cursor: pointer;
+
+
+  width: 150px;
+  max-height: 100%; /* O el valor que desees */
+  height: 250px;
+
+}
+img {
+  max-width: 100%; /* Ensure the image does not exceed the container's width */
+  max-height: 80px; /* Set the maximum height for the carnet size */
+}
+
+
+/* Puedes ajustar el tamaño según tus preferencias */
+.img-carnet2 {
+  width: 100%;
+  max-height: 100%; /* O el valor que desees */
+  height: auto;
+}
+
+ 
+
+
+ 
+
+.img-carnet {
+  height: 300px; /* ajusta la altura según tus necesidades */
+  width: 250px; /* ajusta el ancho según tus necesidades */
+  object-fit: contain;
+}
+
+
+
