--- a/src/app/crear-administrador/crear-administrador.component.html
+++ b/src/app/crear-administrador/crear-administrador.component.html
@@ -1,55 +1,133 @@
 <div class="container">
+  <br>
   <form class="login-form" [formGroup]="personaForm" (ngSubmit)="addPersona()">
     <button type="button" class="close-button" (click)="cerrar()">
       <i class="fa fa-times"></i>
     </button>
     <div class="login-text">
       <div class="logo-container">
-        <img src="assets/img/log.png" alt="">
+        <img src="assets/img/usuarioT.png" alt="">
       </div>
     </div>
 
     <h1>Registro de Administrador</h1>
 
-    <input type="email" class="login-username" autofocus="true" placeholder="Nombre*" formControlName="nombre"
-      [ngClass]="{ 'error': personaForm.get('nombre')?.invalid && (personaForm.get('nombre')?.touched || submitted) }" />
-    <div *ngIf="personaForm.get('nombre')?.invalid && (personaForm.get('nombre')?.touched || submitted)"
-      class="error-message error-text">El nombre es requerido y debe tener al menos 3 caracteres.</div>
+    <div class="row">
+      <div class="col-md-5 mx-auto">
+        <div class="example-full-width disabled text-center">
+          <div class="input-groupss">
+            <div class="form-outliness" data-mdb-input-init>
+              <!-- Agrega el formulario y el campo de identificación aquí -->
+              <form [formGroup]="personaForm">
+                <input formControlName="identificacion" type="search" class="form-controlss" placeholder="Cédula:" >
+              </form>
+            </div>
+            <button type="button" class="btn btn-primaryss btn-danger " data-mdb-ripple-init (click)="BuscarCedula()" >
+              <i class="fa fa-search" aria-hidden="true"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+<br>
 
-    <input type="email" class="login-username" autofocus="true" placeholder="Email*" formControlName="email"
-      [ngClass]="{ 'error': personaForm.get('email')?.invalid && (personaForm.get('email')?.touched || submitted) }" />
-    <div *ngIf="personaForm.get('email')?.invalid && (personaForm.get('email')?.touched || submitted)"
+    <div class="row espaciado-columnas">
+      <div class="col-md-6">
+  
+
+        <input type="email" class="login-username" autofocus="true" placeholder="Primer apellido*" formControlName="Apellido1"
+        [ngClass]="{ 'error': personaForm.get('Apellido1')?.invalid && (personaForm.get('Apellido1')?.touched || submitted) }" />
+      <div *ngIf="personaForm.get('Apellido1')?.invalid && (personaForm.get('Apellido1')?.touched || submitted)"
+        class="error-message error-text">El apellido es requerido y debe tener al menos 3 caracteres.</div>
+      </div>
+
+
+      <div class="col-md-6">
+        <input type="email" class="login-username" autofocus="true" placeholder="Segundo apellido*" formControlName="Apellido2"
+        [ngClass]="{ 'error': personaForm.get('Apellido2')?.invalid && (personaForm.get('Apellido2')?.touched || submitted) }" />
+      <div *ngIf="personaForm.get('Apellido2')?.invalid && (personaForm.get('Apellido2')?.touched || submitted)"
+        class="error-message error-text">El apellido es requerido y debe tener al menos 3 caracteres.</div>
+      </div>
+
+    </div>
+
+
+ 
+    <div class="row espaciado-columnas">
+      <div class="col-md-6">
+        <input type="email" class="login-username" autofocus="true" placeholder="Primer nombre*" formControlName="Nombre1"
+        [ngClass]="{ 'error': personaForm.get('Nombre1')?.invalid && (personaForm.get('Nombre1')?.touched || submitted) }" />
+      <div *ngIf="personaForm.get('Nombre1')?.invalid && (personaForm.get('Nombre1')?.touched || submitted)"
+        class="error-message error-text">El nombre es requerido y debe tener al menos 3 caracteres.</div>
+      </div>
+
+
+      <div class="col-md-6">
+        <input type="email" class="login-username" autofocus="true" placeholder="Nombre*" formControlName="Nombre2"
+        [ngClass]="{ 'error': personaForm.get('Nombre2')?.invalid && (personaForm.get('Nombre2')?.touched || submitted) }" />
+      <div *ngIf="personaForm.get('Nombre2')?.invalid && (personaForm.get('Nombre2')?.touched || submitted)"
+        class="error-message error-text">El nombre es requerido y debe tener al menos 3 caracteres.</div>
+      </div>
+
+    </div>
+
+
+
+    <div class="row espaciado-columnas">
+      <div class="col-md-6">
+        <input type="email" class="login-username" autofocus="true" placeholder="Email*" formControlName="EmailInstitucional"
+      [ngClass]="{ 'error': personaForm.get('EmailInstitucional')?.invalid && (personaForm.get('EmailInstitucional')?.touched || submitted) }" />
+    <div *ngIf="personaForm.get('EmailInstitucional')?.invalid && (personaForm.get('EmailInstitucional')?.touched || submitted)"
       class="error-message error-text">El email es requerido.</div>
+      </div>
 
-    <input type="email" class="login-username" autofocus="true" placeholder="Teléfono*" formControlName="telefono"
-      [ngClass]="{ 'error': personaForm.get('telefono')?.invalid && (personaForm.get('telefono')?.touched || submitted) }" />
-    <div *ngIf="personaForm.get('telefono')?.invalid && (personaForm.get('telefono')?.touched || submitted)"
-      class="error-message error-text">El teléfono es requerido y debe tener al menos 10 dígitos.</div>
 
-    <input type="file" class="login-username" autofocus="true" placeholder="Foto*" formControlName="foto"
-      [ngClass]="{ 'error': personaForm.get('foto')?.invalid && (personaForm.get('foto')?.touched || submitted) }" />
-    <div *ngIf="personaForm.get('foto')?.invalid && (personaForm.get('foto')?.touched || submitted)"
-      class="error-message error-text">La foto es requerida</div>
+      <div class="col-md-6">
+        <input type="email" class="login-username" autofocus="true" placeholder="Teléfono*" formControlName="TelefonoC"
+        [ngClass]="{ 'error': personaForm.get('TelefonoC')?.invalid && (personaForm.get('TelefonoC')?.touched || submitted) }" />
+      <div *ngIf="personaForm.get('TelefonoC')?.invalid && (personaForm.get('TelefonoC')?.touched || submitted)"
+        class="error-message error-text">El teléfono es requerido y debe tener al menos 10 dígitos.</div>
+      </div>
 
-    <input type="email" class="login-username" autofocus="true" placeholder="Usuario*" formControlName="usuario"
-      [ngClass]="{ 'error': personaForm.get('usuario')?.invalid && (personaForm.get('usuario')?.touched || submitted) }" />
-    <div *ngIf="personaForm.get('usuario')?.invalid && (personaForm.get('usuario')?.touched || submitted)"
-      class="error-message error-text">El usuario es requerido y debe tener al menos 3 caracteres.</div>
+    </div>
+
+
+   
+    <div class="row espaciado-columnas">
+      <div class="col-md-6">
+        <input type="email" class="login-username" autofocus="true" placeholder="Usuario*" formControlName="Identificacion"
+        [ngClass]="{ 'error': personaForm.get('Identificacion')?.invalid && (personaForm.get('Identificacion')?.touched || submitted) }" />
+      <div *ngIf="personaForm.get('Identificacion')?.invalid && (personaForm.get('Identificacion')?.touched || submitted)"
+        class="error-message error-text">El usuario es requerido y debe tener al menos 3 caracteres.</div>
+      </div>
+
+
+      <div class="col-md-6">
+        <div class="input-container">
+ 
+          <div class="password-input-container">
+            <input type="{{ showPassword ? 'text' : 'password' }}" class="login-password" placeholder="Contraseña*" formControlName="contrasena"
+              [ngClass]="{ 'error': personaForm.get('contrasena')?.invalid && (personaForm.get('contrasena')?.touched || submitted) }" />
+            <span class="show-password-icon" (click)="togglePasswordVisibility()">
+              <i class="fa fa-eye" *ngIf="showPassword"></i>
+              <i class="fa fa-eye-slash" *ngIf="!showPassword"></i>
+            </span>
+          </div>
+          <div *ngIf="personaForm.get('contrasena')?.invalid && (personaForm.get('contrasena')?.touched || submitted)"
+            class="error-message error-text">La contraseña es requerida y debe tener al menos 4 caracteres.</div>
+        </div>
+      </div>
+
+    </div>
+
+   
+
+     
+
+  
 
  <!-- Agrega estos estilos y eventos al archivo HTML de tu componente -->
-<div class="input-container">
- 
-  <div class="password-input-container">
-    <input type="{{ showPassword ? 'text' : 'password' }}" class="login-password" placeholder="Contraseña*" formControlName="contrasena"
-      [ngClass]="{ 'error': personaForm.get('contrasena')?.invalid && (personaForm.get('contrasena')?.touched || submitted) }" />
-    <span class="show-password-icon" (click)="togglePasswordVisibility()">
-      <i class="fa fa-eye" *ngIf="showPassword"></i>
-      <i class="fa fa-eye-slash" *ngIf="!showPassword"></i>
-    </span>
-  </div>
-  <div *ngIf="personaForm.get('contrasena')?.invalid && (personaForm.get('contrasena')?.touched || submitted)"
-    class="error-message error-text">La contraseña es requerida y debe tener al menos 4 caracteres.</div>
-</div>
+
 
 
     <button type="submit" class="login-submit">
