--- a/src/app/perfilcliente/perfilcliente.component.html
+++ b/src/app/perfilcliente/perfilcliente.component.html
@@ -16,14 +16,19 @@
       <div class="d-flex align-items-center">
         <ul class="navbar-nav">
           <li class="nav-item dropdown">
-            <a class="nav-link cltitle" href="javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <div>
-                <img class="user-avatar" src="assets/img/WhatsApp Image 2023-05-14 at 8.08.13 AM.jpeg" alt="Foto de perfil"> Jamy LV
+            <a class="nav-link cltitle d-flex align-items-center" href="javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              
+            
+              <div class="ml-2 lt" *ngIf="usuariosss"> <!-- Agregado un margen izquierdo para separar el texto del usuario de la imagen -->
+                {{usuariosss.persona.Apellido1}}   {{usuariosss.persona.Nombre1}}  <img [src]="'http://localhost:3000/imagenes/' + usuariosss.persona.foto" alt="Foto de usuario" class="img-carnet circular-image">
               </div>
-              <p>
-               
+            
+              <p class="ml-2"> <!-- Agregado un margen izquierdo para separar el texto del usuario de "Some Actions" -->
+                <span class="d-lg-none d-md-block">Some Actions</span>
               </p>
             </a>
+
+
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" routerLink="/editardatosperfil"><i class="material-icons">settings</i> Cofiguración y privacidad</a>
               <a class="dropdown-item xx" (click)="showModalcerrar()"><i class="material-icons">exit_to_app</i> Cerrar sesión</a>
@@ -82,45 +87,61 @@
                           <h2>Tu Información</h2>
                         </div>
                         <div class="row" *ngIf="usuariosss">
-                          <div class="tim-typo table-row  " data-toggle="modal" data-target="#ventanaUsuario"
-                           >
-                            <h3>
-                              <span class="tim-note ">Usuario</span> <span class="clr">{{usuariosss.usuario}}</span>
-                            </h3>
-              
+                          <!-- Left Column -->
+                          <div class="col-md-8">
+                            <div class="tim-typo table-rowr" data-toggle="modal" data-target="#ventanaUsuario">
+                              <h3>
+                                <span class="tim-note">Usuario</span> <span class="clr">{{usuariosss.Identificacion}}</span>
+                              </h3>
+                            </div>
+                            
+                            <div class="tim-typo table-rowr" data-toggle="modal" data-target="#ventanaNombre">
+                              <h3>
+                                <span class="tim-note">Apellido1</span> <span class="clr">{{usuariosss.persona.Apellido1}}</span>
+                              </h3>
+                            </div>
+
+                            <div class="tim-typo table-rowr" data-toggle="modal" data-target="#ventanaNombre">
+                              <h3>
+                                <span class="tim-note">Apellido2</span> <span class="clr">{{usuariosss.persona.Apellido2}}</span>
+                              </h3>
+                            </div>
+
+                            <div class="tim-typo table-rowr" data-toggle="modal" data-target="#ventanaNombre">
+                              <h3>
+                                <span class="tim-note">Nombre1</span> <span class="clr">{{usuariosss.persona.Nombre1}}</span>
+                              </h3>
+                            </div> 
+
+                            <div class="tim-typo table-rowr" data-toggle="modal" data-target="#ventanaNombre">
+                              <h3>
+                                <span class="tim-note">Nombre2</span> <span class="clr">{{usuariosss.persona.Nombre2}}</span>
+                              </h3>
+                            </div>
+                            
+                            <div class="tim-typo table-row editable-row" data-toggle="modal" data-target="#ventanaEmail" (click)="editaremail(usuariosss)">
+                              <h3>
+                                <span class="tim-note">Email</span>{{usuariosss.persona.EmailInstitucional}}
+                              </h3>
+                            </div>
+                            
+                            <div class="tim-typo table-row editable-row" data-toggle="modal" data-target="#ventanaTelefono" (click)="editartelefono(usuariosss)">
+                              <h3>
+                                <span class="tim-note">Telèfono</span>{{usuariosss.persona.TelefonoC}}
+                              </h3>
+                            </div>
                           </div>
-                          <div class="tim-typo table-row  " data-toggle="modal" data-target="#ventanaNombre"
-                            >
-                            <h3>
-                              <span class="tim-note ">Nombres</span> <span class="clr">{{usuariosss.persona.nombre}}</span>
-                            </h3>
+                          
+                          <!-- Right Column for Photo -->
+                          <div class="col-md-4 text-right">
+                            <div class="tim-typo table-row editable-row" data-toggle="modal" data-target="#ventanaFoto" (click)="editarfoto(usuariosss)">
+                              
+                              <!-- Display the image with the class for the desired size -->
+                              <img *ngIf="usuariosss.persona.foto" [src]="'http://localhost:3000/imagenes/' + usuariosss.persona.foto" alt="Foto de usuario" class="img-carnet2">
+                            </div>
                           </div>
-                          <div class="tim-typo table-row editable-row" data-toggle="modal" data-target="#ventanaEmail"
-                            (click)=" editaremail(usuariosss)">
-                            <h3>
-                              <span class="tim-note ">Email</span>{{usuariosss.persona.email}}
-                            </h3>
-                          </div>
-                          <div class="tim-typo table-row editable-row" data-toggle="modal" data-target="#ventanaTelefono"
-                            (click)=" editartelefono(usuariosss)">
-                            <h3>
-                              <span class="tim-note">Telèfono</span>{{usuariosss.persona.telefono}}
-                            </h3>
-                          </div>
-                        
-              
-              
-              
-              
-                          <div class="tim-typo table-row editable-row " data-toggle="modal" data-target="#ventanaFoto"
-                            (click)=" editarfoto(usuariosss)">
-                            <h4>
-                              <span class="tim-note">Foto</span>{{usuariosss.persona.foto}}
-                            </h4>
-                          </div>
-              
-              
                         </div>
+                        
                       </div>
                     </div>
                   </div>
@@ -173,7 +194,7 @@
             <form [formGroup]="usuarioForm">
               <div class="form-group col-md-8">
                 <label for="inputState" class="select-gr">Email</label> <br>
-                <input class="example-full-width estilos" type="text" formControlName="email">
+                <input class="example-full-width estilos" type="text" formControlName="EmailInstitucional">
               </div>
             </form>
           </div>
@@ -202,7 +223,7 @@
             <form [formGroup]="usuarioForm">
               <div class="form-group col-md-8">
                 <label for="inputState" class="select-gr">Teléfono</label> <br>
-                <input class="example-full-width estilos" type="text" formControlName="telefono">
+                <input class="example-full-width estilos" type="text" formControlName="TelefonoC">
               </div>
             </form>
           </div>
@@ -228,17 +249,26 @@
   
             </button>
           </div>
+        
+
+
+
           <div class="modal-body">
-            <form [formGroup]="usuarioForm">
-              <div class="form-group col-md-8">
-                <label for="inputState" class="select-gr">Foto</label> <br>
-                <input class="example-full-width estilos" type="text" formControlName="foto">
+            <form>
+              <div class="form-group col-md-8 mx-auto">
+                <div class="custom-file d-flex justify-content-center">
+                  <input type="file" class="custom-file-input" id="customFile" name="image" #fileInput (change)="onFileChange($event)" style="display:none;">
+                  <img [src]="selectedImage" alt="" class="img-carnet6 letrita" (click)="fileInput.click()">
+               
+                </div>
+                <br>  
               </div>
             </form>
           </div>
+      
           <div class="modal-footer">
-            <button type="button" class="btn " data-dismiss="modal" (click)="closeModal()">Cerrar</button>
-            <button type="button" class="btn btn-danger" (click)=" editarFoto()" data-dismiss="modal">Guardar</button>
+            <button type="button" class="btn" data-dismiss="modal" (click)="closeModal()">Cerrar</button>
+            <button type="button" class="btn btn-danger" (click)="editarFoto()" data-dismiss="modal">Guardar</button>
           </div>
         </div>
       </div>
