--- a/src/app/perfilcliente/perfilcliente.component.scss
+++ b/src/app/perfilcliente/perfilcliente.component.scss
@@ -11,6 +11,12 @@
     cursor: pointer;
     
   }
+  .editable-rowr {
+     color: #919191;
+    
+  }
+
+
   
   .editable-row:hover {
     background-color: #f2f2f2;
@@ -47,9 +53,7 @@
   }
   
   
-  .editable-row {
-    cursor: pointer;
-  }
+ 
   
   .sele {
     color: black;
@@ -316,3 +320,75 @@ h2{
 .dropdown-menu{
   cursor: pointer;
 }
+
+
+.circular-image {
+  width: 40px; /* Ajusta el tamaño según sea necesario */
+  height: 40px; /* Ajusta el tamaño según sea necesario */
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.img-carnet2 {
+  width: 100%;
+  max-height: 100%; /* O el valor que desees */
+  height: auto;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.letrita{
+  font-size: 15px;
+  color: rgb(93, 97, 100);
+  cursor: pointer;
+}
+
+.letritav2{
+  font-size: 15px;
+  color: rgb(93, 97, 100);
+  cursor: pointer;
+
+
+  width: 150px;
+  max-height: 100%; /* O el valor que desees */
+  height: 250px;
+
+}
+img {
+  max-width: 100%; /* Ensure the image does not exceed the container's width */
+  max-height: 80px; /* Set the maximum height for the carnet size */
+}
+
+
+/* Puedes ajustar el tamaño según tus preferencias */
+.img-carnet2 {
+  width: 100%;
+  max-height: 100%; /* O el valor que desees */
+  height: auto;
+}
+
+ 
+
+
+ 
+
+.img-carnet6 {
+  height: 300px; /* ajusta la altura según tus necesidades */
+  width: 250px; /* ajusta el ancho según tus necesidades */
+  object-fit: contain;
+}
+
+.lt{
+  font-family: 'Arial';
+ }
