--- a/src/app/reporte/reporte.component.html
+++ b/src/app/reporte/reporte.component.html
@@ -15,13 +15,17 @@
           <ul class="navbar-nav">
             
               <li class="nav-item dropdown">
-                  <a class="nav-link cltitle" href="javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                   <div>  <img class="user-avatar" src="assets/img/WhatsApp Image 2023-05-14 at 8.08.13 AM.jpeg" alt="Foto de perfil"> Jamy LV</div>
-                    
-                      <p>
-                          <span class="d-lg-none d-md-block">Some Actions</span>
-                      </p>
-                  </a>
+                <a class="nav-link cltitle d-flex align-items-center" href="javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                 
+                
+                  <div class="ml-2 lt" *ngIf="usuariosss"> <!-- Agregado un margen izquierdo para separar el texto del usuario de la imagen -->
+                    {{usuariosss.persona.Apellido1}}    {{usuariosss.persona.Nombre1}}   <img [src]="'http://localhost:3000/imagenes/' + usuariosss.persona.foto" alt="Foto de usuario" class="img-carnet circular-image">
+                  </div>
+                
+                  <p class="ml-2"> <!-- Agregado un margen izquierdo para separar el texto del usuario de "Some Actions" -->
+                    <span class="d-lg-none d-md-block">Some Actions</span>
+                  </p>
+                </a>
                   <div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
                       <a class="dropdown-item"  routerLink="/editardatosperfil" > <i class="material-icons">settings</i> Cofiguración y privacidad</a>
                       <a class="dropdown-item xx" (click)="showModalcerrar()"> <i class="material-icons">exit_to_app</i>  Cerrar sesión</a>
