--- a/src/app/reporteproducto/reporteproducto.component.scss
+++ b/src/app/reporteproducto/reporteproducto.component.scss
@@ -92,11 +92,7 @@
   width: 990px;
 }
 
-.labelversion2 {
-  display: block;
-  /* Esto hará que el label esté en una línea separada */
-  margin-bottom: 10px; /* Añade margen inferior para separación */
-}
+
 
 /* app.component.css u otro archivo de estilo Angular */
 .informacion-alimento, .resultados-filtro {
@@ -137,3 +133,59 @@
 }
 /* Estilo para el cambio de color al pasar el cursor sobre la fila */
 /* Estilo para el cambio de color al pasar el cursor sobre las opciones */
+
+
+ 
+
+
+
+
+/* Estilos para las tablas dentro de container-principal */
+.container-principal .card {
+  /* Ajusta los estilos según tus necesidades */
+  margin: 20px;
+  padding: 20px;
+  background-color: white;
+}
+
+.ñ{
+  font-size: 28px;
+    font-weight: bold;
+  
+}
+
+
+ 
+  .encabezado {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  .encabezado h2 {
+    color: #333; /* Color del texto */
+    font-size: 24px; /* Tamaño del texto */
+  }
+
+  .linea-divisoria {
+    border: 1px solid #ccc; /* Color y grosor de la línea divisoria */
+    margin-top: 10px; /* Espacio superior de la línea */
+    margin-bottom: 20px; /* Espacio inferior de la línea */
+  }
+ 
+
+  .label-container {
+    text-align: center; /* Alinea el contenido en el centro */
+}
+
+.labelversion5 {
+    display: block; /* Asegura que el label sea un bloque */
+    margin-top: 10px; /* Ajusta este valor según sea necesario */
+}
+
+
+.labelversion2 {
+  display: block;
+  /* Esto hará que el label esté en una línea separada */
+  margin-bottom: 10px; /* Añade margen inferior para separación */
+}
+
